--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@ title: Home
 
 <img src="/images/kermit.png" style="float: right; margin: 10px;" />
 
-<p>Welcome to my blog!</p>
+<p>Welcome to my little blog!</p>
 
 <p>I've reproduced a list of recent posts here for your reading pleasure:</p>
 
-<h2>Posts</h2>
+<h2>Categories</h2>
+$categories$
+
+<h2>Recent Posts</h2>
 $partial("templates/post-list.html")$
 
 <p>…or you can find more in the <a href="/archive.html">archives</a>.</p>
