--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Home
 
 <h2>Welcome</h2>
 
-<img src="/images/kermit.png" style="float: right; margin: 10px;" />
+<img src="/images/alien_shower.png" style="float: right; margin: 10px;" />
 
 <p>Welcome to my little blog!</p>
 
